force-app/main/default/objects/Contract/fields/Contract_Net_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Contract_Net_Amount_with_Tax__c</fullName>
    <formula>BLANKVALUE(Rental_Amount__c, 0) + BLANKVALUE(Services_Amount__c, 0) + BLANKVALUE( Overage_Amount__c , 0) + BLANKVALUE(Contract_Tax_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Net Amount with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>