force-app/main/default/objects/Contract/fields/Contract_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tax_Amount__c</fullName>
    <formula>(BLANKVALUE(Rental_Amount__c, 0) + BLANKVALUE(Services_Amount__c, 0) + BLANKVALUE(Overage_Amount__c, 0)) * BLANKVALUE(Total_Tax_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>