force-app/main/default/objects/Contract/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <formula>SBQQ__Quote__r.Expected_End_Date__c</formula>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>