force-app/main/default/objects/Contract/fields/of_Returned_Rentals__c.field-meta.xml
<CustomField>
    <fullName>of_Returned_Rentals__c</fullName>
    <label># of Returned Rentals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>