force-app/main/default/objects/Contract/fields/Overage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overage_Amount__c</fullName>
    <label>Overage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>