force-app/main/default/objects/Contract/fields/Paid_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Paid_Upfront__c</fullName>
    <formula>SBQQ__Quote__r.Paid_Upfront__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Upfront</label>
    <type>Checkbox</type>
</CustomField>