force-app/main/default/objects/Contract/fields/QB_Invoice_Fully_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_Fully_Paid_Date__c</fullName>
    <label>QB Invoice Fully Paid Date</label>
    <type>Date</type>
</CustomField>