force-app/main/default/objects/Contract/fields/Quickbook_Invoice_Partly_Paid__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Invoice_Partly_Paid__c</fullName>
    <formula>AND(Quickbooks_Invoice_Balance__c &gt; 0, Quickbooks_Invoice_Balance__c &lt; SBQQ__Quote__r.Net_Amount_Tax__c)</formula>
    <label>Quickbook Invoice Partly Paid</label>
    <type>Checkbox</type>
</CustomField>