force-app/main/default/objects/Contract/fields/Quickbooks_Invoice_Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_Fully_Paid__c</fullName>
    <formula>AND(
  NOT(ISNULL(Quickbooks_Invoice_Balance__c)),
  Quickbooks_Invoice_Balance__c = 0
)</formula>
    <label>Quickbooks Invoice Fully Paid</label>
    <type>Checkbox</type>
</CustomField>