force-app/main/default/objects/Contract/fields/Quickbooks_Invoice_Path__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_Path__c</fullName>
    <label>Quickbooks Invoice Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Review</fullName>
            </value>
            <value>
                <fullName>Invoice Requested</fullName>
            </value>
            <value>
                <fullName>Invoice Generated</fullName>
            </value>
            <value>
                <fullName>Invoice Partly Paid</fullName>
            </value>
            <value>
                <fullName>Invoice Fully Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>