force-app/main/default/objects/Contract/fields/Quickbooks_URL__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_URL__c</fullName>
    <formula>HYPERLINK(
  &quot;https://sandbox.qbo.intuit.com/app/customerdetail?nameId=&quot; &amp; Account.Quickbooks_Id__c,
  &quot;Quickbooks Account Link&quot;
)</formula>
    <label>Quickbooks URL</label>
    <type>Text</type>
</CustomField>