force-app/main/default/objects/Contract/fields/Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount__c</fullName>
    <label>Rental/Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>