force-app/main/default/objects/Contract/fields/Service_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Scheduled_Date__c</fullName>
    <label>Service Scheduled Date</label>
    <type>Date</type>
</CustomField>