force-app/main/default/objects/Contract/fields/Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>Services_Amount__c</fullName>
    <label>Services/One-Time Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>