force-app/main/default/objects/Contract/fields/Term_Length_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Days__c</fullName>
    <formula>Expected_End_Date__c -  StartDate</formula>
    <label>Term Length (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>