force-app/main/default/objects/Contract/fields/Total_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Rate__c</fullName>
    <formula>SBQQ__Quote__r.Total_Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>