force-app/main/default/objects/Contract/recordTypes/Arbutus_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Arbutus_Contracts</fullName>
    <active>true</active>
    <label>Arbutus Contracts</label>
</RecordType>