force-app/main/default/objects/Contract/recordTypes/Fundamental_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Fundamental_Contracts</fullName>
    <active>true</active>
    <label>Fundamental Contracts</label>
</RecordType>